--- a/src/views/course.hbs
+++ b/src/views/course.hbs
@@ -15,6 +15,7 @@
 			<div class="card-action actions">
 				<a href="/courses/{{course.id}}/edit?allow=true">Edit course</a>
 				<form method="post" action="/cart/add">
+					<input type="hidden" name="_csrf" value="{{@root.csrf}}">
 					<input type="hidden" name="id" value="{{course.id}}"/>
 					<button class="btn btn-primary"
 									type="submit">
