--- a/src/views/courses.hbs
+++ b/src/views/courses.hbs
@@ -21,6 +21,7 @@
 								<a href="/courses/{{id}}">Open course</a>
 								<a href="/courses/{{id}}/edit?allow=true">Edit course</a>
 								<form method="post" action="/cart/add">
+									<input type="hidden" name="_csrf" value="{{@root.csrf}}">
 									<input type="hidden" name="id" value="{{id}}"/>
 									<button class="btn btn-primary"
 													type="submit">
