--- a/src/views/partials/login-form.hbs
+++ b/src/views/partials/login-form.hbs
@@ -1,6 +1,7 @@
 <form class="col s12"
 			action="/auth/login"
 			method="post">
+	<input type="hidden" name="_csrf" value="{{csrf}}">
 	<div class="row">
 		<div class="input-field col s12">
 			<input id="log_email"
