--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -37,6 +37,7 @@
 
 				<li>
 					<form method="post" action="/auth/logout">
+						<input type="hidden" name="_csrf" value="{{csrf}}">
 						<button class="btn" type="submit">Logout</button>
 					</form>
 				</li>
